test/compile_fail/effect_optional_context_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.effect.optional.Context;
}
